additional alignment fix

--- a/src/assets/scss/components/products.scss
+++ b/src/assets/scss/components/products.scss
@@ -666,9 +666,9 @@
                     margin-right: 0;
                 }
                 input {
-                    // width: 79px;
-                    // height: 32px;
-                    width: 50px;
+                    width: 79px;
+                    height: 32px;
+                    // width: 50px;
                     // height: 25px;
                     background: #ffffff;
                     border-radius: 5px;
@@ -681,15 +681,15 @@
                     color: #000000;
                     text-align: center;
                     margin-bottom: 10px;
-                    @include mediaQueries(mobile) {
-                        width: 100%;
-                    }
-                    @include mediaQueries(pad) {
-                        width: 100%;
-                    }
-                    @include mediaQueries(padpro) {
-                        width: 100%;
-                    }
+                    // @include mediaQueries(mobile) {
+                    //     width: 100%;
+                    // }
+                    // @include mediaQueries(pad) {
+                    //     width: 100%;
+                    // }
+                    // @include mediaQueries(padpro) {
+                    //     width: 100%;
+                    // }
                 }
                 .cart-btn {
                     width: 79px;
@@ -789,14 +789,18 @@
                 }
             }
             .sale-rep-btn {
-                width: 106px;
+                width: 135px;
+                @media screen and (max-width: 1510px) and (min-width: 1400px) {
+                    width: 106px;
+                }
                 @include mediaQueries(padpro) {
-                    width: unset;
-                    font-size: 13px;
+                    font-size: 12px;
+                }
+                @include mediaQueries(pad) {
+                    font-size: 12px;
                 }
                 @include mediaQueries(mobile) {
-                    width: unset;
-                    font-size: 13px;
+                    font-size: 12px;
                 }
             }
         }
